Añadidos métodos para trabajar con imágenes

--- a/Recompila.Helper.vbproj
+++ b/Recompila.Helper.vbproj
@@ -119,6 +119,8 @@
     <Compile Include="Modulos\Ficheros.Extensiones.vb" />
     <Compile Include="Modulos\Ficheros.Mime.vb" />
     <Compile Include="Modulos\Ficheros.vb" />
+    <Compile Include="Modulos\Imagenes.cImprimirImagen.vb" />
+    <Compile Include="Modulos\Imagenes.vb" />
     <Compile Include="Modulos\Log.vb" />
     <Compile Include="Modulos\Procesos.Ventanas.strInfoVentana.vb" />
     <Compile Include="Modulos\Procesos.Ventanas.vb" />
