--- a/Recompila.Helper.vbproj
+++ b/Recompila.Helper.vbproj
@@ -129,6 +129,7 @@
     <Compile Include="Modulos\Procesos.vb" />
     <Compile Include="Modulos\Streams.vb" />
     <Compile Include="Modulos\Validadores.vb" />
+    <Compile Include="Modulos\Web.HTML.vb" />
     <Compile Include="Modulos\Windows.UAC.vb" />
     <Compile Include="Modulos\WinForms.ProgressBar.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
